--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,39 @@
 body{
-    background-color:pink  ;
+    background-color:pink;
+}
+
+.loader{
+    position: fixed;
+    height:100vh;
+    width:100vw;
+    z-index: 999;
+    top: 0;
+    left: 0;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color:rgba(0,0,0,0.6);
+}
+
+@keyframes spinner {
+    0% {
+        transform: translate3d(-50%, -50%, 0) rotate(0deg);
+    }
+    100% {
+        transform: translate3d(-50%, -50%, 0) rotate(360deg);
+    }
+}
+.spin::before {
+    animation: 1.5s linear infinite spinner;
+    animation-play-state: inherit;
+    border: solid 5px #cfd0d1;
+    border-bottom-color: #1c87c9;
+    border-radius: 50%;
+    content: "";
+    height: 50px;
+    width: 50px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    will-change: transform;
 }
